log
Sun May 15 02:10:05 UTC 2022: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  2|4
total_score: 15/70
4a3491b
Sun May 15 03:12:41 UTC 2022: 
 sudoku.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
test.c: In function ‘is_valid’:
sudoku.c:67:24: error: ‘l’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
           if(n->sudo[m][l] != 0){
              ~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
3dd6995
